-
Bug
-
Resolution: Done
-
P1: Critical
-
5.14.0
-
e5570eecd3a4fc61020d28699169707a2c1f5dc9 03df41fbcdb6e1ae3d0792d5b7806e5335b58794
Attached example sometimes crashes, sometimes tells the list copied from another object is null. Stack trace of the crash case is:
1 QV4::QmlListWrapper::virtualGet(QV4::Managed const *, QV4::PropertyKey, QV4::Value const *, bool *) 0x7ffff71f0b00 2 QV4::getElementIntFallback(QV4::ExecutionEngine *, QV4::Value const&, unsigned int) [clone .constprop.93] 0x7ffff70ea1c6 3 QV4::Moth::VME::interpret(QV4::CppStackFrame *, QV4::ExecutionEngine *, const char *) 0x7ffff70da1a0 4 QV4::Moth::VME::exec(QV4::CppStackFrame *, QV4::ExecutionEngine *) 0x7ffff70de47b 5 QV4::ArrowFunction::virtualCall(QV4::FunctionObject const *, QV4::Value const *, QV4::Value const *, int) 0x7ffff70774e0 6 QV4::Moth::VME::interpret(QV4::CppStackFrame *, QV4::ExecutionEngine *, const char *) 0x7ffff70db753 7 QV4::Moth::VME::exec(QV4::CppStackFrame *, QV4::ExecutionEngine *) 0x7ffff70de47b 8 QV4::ArrowFunction::virtualCall(QV4::FunctionObject const *, QV4::Value const *, QV4::Value const *, int) 0x7ffff70774e0 9 QQmlVMEMetaObject::metaCall(QObject *, QMetaObject::Call, int, void * *) 0x7ffff7173bb6 10 QMetaMethod::invoke(QObject *, Qt::ConnectionType, QGenericReturnArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument) const 0x7ffff69f62a8 11 QMetaObject::invokeMethod(QObject *, const char *, Qt::ConnectionType, QGenericReturnArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument) 0x7ffff69fafd8 12 QMetaObject::invokeMethod qobjectdefs.h 461 0x402054 13 main main.cpp 25 0x401ba9