src/qml/qml/qqmlvmemetaobject_p.h
@@ -188,7 +188,7 @@ public:
     QDateTime readPropertyAsDateTime(int id);
     QRectF readPropertyAsRectF(int id) const;
     QObject *readPropertyAsQObject(int id) const;
-    QList<QObject *> *readPropertyAsList(int id) const;
+    QVector<QQmlGuard<QObject> > *readPropertyAsList(int id) const;
 
     void writeProperty(int id, int v);
     void writeProperty(int id, bool v);
